test push github

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
    
     <div class="container">
-
+  
         <div class="form col col-lg-12" id="form">
             <label for="Input"></label>
             <input type="text" class="form col" id="input" placeholder="Please enter a city">
@@ -25,7 +25,7 @@
           </div>
 
         <div class="row">
-            <div class="city col-12 col-lg" id="city"></div>
+            <div class="city col-12 col-lg" id="city"> <span id="city"> </span> </div>
             <div class="temperature col-12 col-lg" ><i class="fas fa-temperature-high"></i> <span id="temperature"></span></div>
         </div>
         <div class="row">
